<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_app"
        tools:context=".auth.login.Login">


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_250sdp"
            android:background="@drawable/bg_red_circle">

            <ImageView
                android:layout_width="@dimen/_110sdp"
                android:layout_height="wrap_content"
                android:layout_gravity="center|top"
                android:layout_marginTop="@dimen/_30sdp"
                android:src="@drawable/ic_eat_more_logo" />


        </FrameLayout>


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_70sdp"
            app:cardCornerRadius="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_150sdp">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_30sdp"
                        android:layout_marginTop="@dimen/_40sdp"
                        android:background="@drawable/bg_login_sign_up_status"
                        android:orientation="horizontal">



                        <androidx.cardview.widget.CardView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            app:cardBackgroundColor="@color/red"
                            app:cardCornerRadius="@dimen/_22sdp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:fontFamily="@font/poppins"
                                android:textSize="@dimen/_10sdp"
                                android:text="@string/log_in"
                                android:textColor="@color/white"
                                android:textStyle="bold" />

                        </androidx.cardview.widget.CardView>


                        <TextView
                            android:id="@+id/btnSignUp"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:fontFamily="@font/poppins"
                            android:text="@string/signup"
                            android:textAlignment="center"
                            android:textColor="@color/red"
                            android:textSize="@dimen/_10sdp" />





                    </LinearLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_45sdp"
                        app:passwordToggleEnabled="false"
                        app:passwordToggleTint="@android:color/darker_gray">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/white"
                            android:fontFamily="@font/poppins"
                            android:hint="@string/email_user_info"
                            android:inputType="textEmailAddress"
                            android:maxLines="1"
                            android:textColorHint="@android:color/darker_gray"
                            android:textSize="@dimen/_11sdp" />

                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_15sdp"
                        app:passwordToggleEnabled="true"
                        app:passwordToggleTint="@android:color/darker_gray">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/white"
                            android:fontFamily="@font/poppins"
                            android:hint="@string/password"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:textColorHint="@android:color/darker_gray"
                            android:textSize="@dimen/_11sdp" />

                    </com.google.android.material.textfield.TextInputLayout>




                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_Login"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_45sdp"
                        app:cornerRadius="@dimen/_45sdp"
                        android:fontFamily="@font/poppins"
                        android:layout_marginTop="@dimen/_45sdp"
                        android:backgroundTint="@color/red"
                        android:textStyle="bold"
                        android:text="@string/log_in"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_12sdp"
                        />

                    <androidx.legacy.widget.Space
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/_15sdp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/poppins"
                        android:text="@string/or"
                        android:textSize="@dimen/_12sdp" />


                    <androidx.legacy.widget.Space
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/_15sdp"/>


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="horizontal">


                        <FrameLayout
                            android:id="@+id/btn_loginByFaceBook"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/bg_login_sign_up_status">

                            <ImageView
                                android:layout_width="@dimen/_23sdp"
                                android:layout_height="@dimen/_23sdp"
                                android:layout_margin="@dimen/_10sdp"
                                android:src="@drawable/ic_facebook"/>

                        </FrameLayout>

                        <androidx.legacy.widget.Space
                            android:layout_width="@dimen/_12sdp"
                            android:layout_height="wrap_content"/>


                        <FrameLayout
                            android:id="@+id/btn_loginByTwitter"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/bg_login_sign_up_status">

                            <ImageView
                                android:layout_width="@dimen/_23sdp"
                                android:layout_height="@dimen/_23sdp"
                                android:layout_margin="@dimen/_10sdp"
                                android:src="@drawable/ic_twitter"/>

                        </FrameLayout>


                        <androidx.legacy.widget.Space
                            android:layout_width="@dimen/_12sdp"
                            android:layout_height="wrap_content"/>


                        <FrameLayout
                            android:id="@+id/btn_loginByGoogle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/bg_login_sign_up_status">

                            <ImageView
                                android:layout_width="@dimen/_23sdp"
                                android:layout_height="@dimen/_23sdp"
                                android:layout_margin="@dimen/_10sdp"
                                android:src="@drawable/ic_google"/>

                        </FrameLayout>


                    </LinearLayout>


                </LinearLayout>

            </ScrollView>

        </androidx.cardview.widget.CardView>


        <RelativeLayout
            android:layout_width="@dimen/_200sdp"
            android:layout_height="@dimen/_120sdp"
            android:layoutDirection="ltr"
            android:translationX="@dimen/_25sdp"
            android:layout_gravity="bottom|right">


            <ImageView
                android:layout_width="@dimen/_150sdp"
                android:layout_height="match_parent"
                android:translationX="@dimen/_5sdp"
                android:translationY="@dimen/_40sdp"
                android:src="@drawable/ic_salad" />


            <ImageView
                android:layout_width="@dimen/_110sdp"
                android:layout_height="match_parent"
                android:translationX="@dimen/_75sdp"
                android:translationY="@dimen/_50sdp"
                android:src="@drawable/ic_two_red_tomatoes" />


        </RelativeLayout>


    </FrameLayout>

</layout>